# wigHaven-Project

./: .gitignore  AUDIT_REPORT.md  design_system.md  doneandyet.md  dump.rdb  frontend_specs.md  newadmin.md  serversidepaymenttest.js  thelist.txt  wowadmin.html
.agent/rules/: rule.md
.agent/workflows/: agent.md  cloudflare-migration.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  check-dates.mjs  db-test-neon-1765319827248.json  db-test-neon-1765320710214.json  db-test-supabase-1765319747874.json  debug-dates.mjs  debug-orders.mjs  debug-top-products.mjs  deploy_backend.ps1  jest.config.js  package.json  test-fix.mjs  test-query.mjs  test_outcome_final.txt  wig_shop_features.md
backend-gateway/: Dockerfile  package-lock.json  package.json  push_to_hf.ps1  server.js  test_gateway.ps1
backend-gateway/speedgateway/: Cargo.toml  Dockerfile  readme.md
backend-gateway/speedgateway/src/: main.rs
backend/prisma/: clear.js  schema-xata.prisma  schema.prisma  seed.js
backend/scripts/: db-crud-test.js  db-deep-benchmark.js  db-performance-test.js  (+7 more)
frontend/: .env.development  .env.example  .env.production  .env.production.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts  wrangler.toml
gateway-worker/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
mobilehelpinspiration/: home.html  productdetail.html  shop.html
newdesign/: 1 (1).html  1 (2).html  1 (3).html  1 (4).html
scripts/: hf_deploy.py
(+356 files in other folders)
