[package]
name = "wighaven-gateway"
version = "2.0.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-full", "timeout"] }

# HTTP client (hyper-based for streaming)
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
hyper-rustls = { version = "0.27", features = ["http1", "http2", "native-tokio", "tls12"] }
http-body-util = "0.1"

# Utilities
bytes = "1"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

# WebSocket proxy support
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
url = "2"

[profile.release]
opt-level = 3
lto = "fat"           # Maximum link-time optimization
codegen-units = 1     # Single codegen unit for best optimization
strip = true          # Strip symbols for smaller binary
panic = "abort"       # Smaller binary, faster panics